# fastapi

fastapi_practice/: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  run.bat  run.sh
fastapi_practice/app/: __init__.py  main.py
fastapi_practice/app/core/: __init__.py  config.py  exceptions.py  handlers.py  hashing.py  security.py
fastapi_practice/app/db/: __init__.py  storage.py
fastapi_practice/app/dependencies/: __init__.py  task.py  user.py
fastapi_practice/app/models/: __init__.py
fastapi_practice/app/routers/: __init__.py  project.py  task.py  user.py
fastapi_practice/app/schemas/: __init__.py  project.py  query.py  task.py  user.py
fastapi_practice/app/services/: project_service.py  task_service.py  user_service.py
fastapi_practice/tests/: __init__.py  conftest.py  test_auth.py  test_auth_errors.py  test_projects.py  test_tasks.py
