[project]
name = "python-practice"
version = "1.0.0"
description = "FastAPI Task Management Application with authentication and RBAC"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.2.1",
    "email-validator==2.1.1",
    "python-multipart==0.0.6",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "argon2-cffi==23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "httpx==0.28.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
